# Wapi_bot

wapibot/: .env.txt  .gitignore  README copy.md  app.py  config.py  debug.md  docker-compose.yml  frappe_client.py  main.py  pyproject copy.toml  pyproject.toml  requirements copy.txt  requirements.txt  wapi_client.py
wapibot/backend/: CLAUDE.md  README.md  requirements.txt  test_wapi_demo.py
wapibot/backend/data/: brain_gym.db  conversations.db  langgraph_checkpoints.db-shm  websocket_sessions.db
wapibot/backend/docs/: FRAPPE_BY_PHONE_METHODS.md  MIGRATION_SUMMARY.md  REFACTORING_PLAN.md
wapibot/backend/scripts/: setup_security.py
wapibot/backend/src/: main.py  tasks_wrapper.py
wapibot/backend/src/api/: health_api.py  health_checks.py  router_registry.py
wapibot/backend/src/core/: brain_config.py  brain_router.py  brain_toggles.py  brain_workflow.py  checkpointer.py  config.py  dspy_config.py  health_monitor.py  middleware_setup.py  observation_hook.py  redis_manager.py  redis_subscriber.py  security_config.py  shutdown_handler.py  warmup.py  websocket_manager.py
wapibot/docs/: BIG_BRAIN.md  BRAIN_NODES_FIX.md  BRAIN_QUICK_START.md  BRAIN_SYSTEM_IMPLEMENTATION.md  Brain_based_refactoring.md  DRY_FIX.md  GEPA_FINAL_IMPLEMENTATION.md  GEPA_IMPLEMENTATION_SUMMARY.md  Newplan.md  PAYMENT_METHODS.md  PHASE1_COMPLETE.md  PHASE2_MISSING_FILES_TREE.md  PYDANTIC_V2_IMPROVEMENTS.md  REDIS_SETUP.md  SMART_SLOT_SELECTION_PLAN.md  UPI_QR_CODE_GENERATION.md  WAPIBOT_API_TEST_RESULTS.md
wapibot/frontend/hooks/: useWebSocketChat.ts
wapibot/frontend/lib/: types.ts
(+241 files in other folders)
