[project]
name = "wapibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.2.0",
    "aiosqlite>=0.20.0",
    "black>=23.0.0",
    "celery>=5.4.0",
    "cryptography>=46.0.3",
    "dspy-ai>=3.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "isort>=5.13.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.40",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "litellm>=1.40.0",
    "mypy>=1.7.0",
    "ollama>=0.4.0",
    "openai>=1.50.0",
    "phonenumbers>=9.0.21",
    "pydantic>=2.5.0",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.6.0",
    "pylint>=3.3.0",
    "pyrefly>=0.46.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.0.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "pytz>=2023.3",
    "qrcode[pil]>=7.4.2",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "ruff>=0.1.0",
    "sqlmodel>=0.0.27",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
    "uvicorn[standard]>=0.24.0",
]
